--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,10 @@
     background-image: url("/assets/images/01-02-02_background-img.jpg");
     }
     
+    p {
+  font-weight: bold;
+}
     h2 {
   color: orangered;
 }
+
